XdgSurfaceWindow: Always update move resize geometry

Since interactive move resize logic has changed, there is
no need to guard maybeUpdateMoveResizeGeometry anymore.

BUG: 483309